<resources>
    <string name="app_name">Famous Quotes</string>
    <string name="home">Home</string>
    <string name="author">Author</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="about_fragment">This app is about the most popular famous quotes.
        This android app was developed by <u>Koshkinbaev Nurlibay</u>,
        a pupil of the <font fgcolor="#ff0000"> <a href="https://www.instagram.com/texnopos/">TexnoPOS</a> </font> IT school
    </string>

    <string name="authors_fragment">Authors Fragment</string>
    <string name="favorite_fragment">Favorite Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="theme_fragment">Theme Fragment</string>
    <string name="quotes_theme">quotes theme</string>
    <string name="this_is_quotes_text">This is quotes Text</string>
    <string name="author_name">Author Name</string>
    <string name="authors_quotes_text">Authors Quotes Text</string>
    <string name="search_quotes">Search quotes</string>
    <string name="search_authors">Search authors</string>
    <string name="_default">Default</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="no_favorites">No Favorites</string>
    <string name="empty" />

    <string name="telegram">Telegram:  <font fgcolor="#ff0000">
        <a href="https://t.me/NURLIBAY_KNK">Nurlibay</a>
        </font>
    </string>
    <string name="gmail">Gmail: koshkinbayevn@gmail.com</string>

</resources>