<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/themeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        />

    <item android:id="@+id/authorsFragment"
        android:title="@string/author"
        android:icon="@drawable/ic_author"
        />

    <item android:id="@+id/favoriteFragment"
        android:title="@string/favorite"
        android:icon="@drawable/ic_favorite"
        />

    <item android:id="@+id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        />

    <item android:id="@+id/aboutFragment"
        android:title="@string/about"
        android:icon="@drawable/ic_info"
        />

</menu>